Add studentReview Project and Fix styling in resume

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -1,112 +1,120 @@
 <!DOCTYPE html>
-  <html lang="en">
-      <head>
-        <meta charset="utf-8" />
-        <title>Projects</title>
-        <link rel="stylesheet" href="../screen.css"/>
-      </head>
-      <body>
-        <header id="header">
-          <nav id="site-nav">
-            <ul>
-              <li>
-                <a href="../">Home</a>
-              </li>
-              <li>
-                <a href="../resume/">Resume</a>
-              </li>
-              <li>
-                <a href="../Projects/">Projects</a>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <main id="projectsContent">
-          
-          <section id="appOne" class="applications">
-            <h3>Student Review Database</h3>
-            <p>Flask Web Application</p>
-            <p>A Web application built to allows student to review classes and Professors.
-              Allows them to also view reviews left by other students.
-            </p>
-            <p>Data is saved in an AWS Database</p>
+<html lang="en">
 
-            <section class="imageSection">
-              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
-              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
-              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
-              <img src="IMAGE TO BE ADDED" alt="IMAGE TO BE ADDED">
-            </section>
+<head>
+  <meta charset="utf-8" />
+  <title>Projects</title>
+  <link rel="stylesheet" href="../screen.css" />
+</head>
 
-          </section>
+<body>
+  <header id="header">
+    <nav id="site-nav">
+      <ul>
+        <li>
+          <a href="../">Home</a>
+        </li>
+        <li>
+          <a href="../resume/">Resume</a>
+        </li>
+        <li>
+          <a href="../Projects/">Projects</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  <main id="projectsContent">
 
+    <section id="appOne" class="applications">
+      <h3>Student Review Database</h3>
+      <p>Flask Web Application</p>
+      <p>A Web application built to allows student to review classes and Professors.
+        Allows them to also view reviews left by other students.
+      </p>
+      <p>Data is saved in an AWS Database</p>
 
-          <section id="appTwo" class="applications">
-            <h3>Cybergoose</h3>
+      <section class="imageSection">
+        <img src="../assets/studentReviewLogin.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewAccountInfo.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewProfessorList.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewProfessorView.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewClassList.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewViewClass.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewleaveReview.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewViewNewReview.png" alt="IMAGE TO BE ADDED">
+        <img src="../assets/studentReviewDBTable.png" alt="IMAGE TO BE ADDED">
+      </section>
 
-            <p>A cybersecurity Application built to scan your PC for weaknesses </p>
-            <p>Saves data in a secure Database hosted on AWS</p>
-
-            <section>
-              <video width="320" height="240" controls>
-                <source src="../assets/cybergooseVideo.mp4" type="video/mp4">
-                <source src="movie.ogg" type="video/ogg">
-                Your browser does not support the video tag.
-              </video>
-            </section>
+    </section>
 
 
-          </section>
+    <section id="appTwo" class="applications">
+      <h3>Cybergoose</h3>
+
+      <p>A cybersecurity Application built to scan your PC for weaknesses </p>
+      <p>Saves data in a secure Database hosted on AWS</p>
+
+      <section>
+        <video width="500" height="400" controls>
+          <source src="../assets/cybergooseVideo.mp4" type="video/mp4">
+          <source src="movie.ogg" type="video/ogg">
+          Your browser does not support the video tag.
+        </video>
+      </section>
 
 
-          <section id="appThree" class="applications">
-            <h3>Python Programs</h3>
-          </section>
+    </section>
 
 
-          <section id="appFour" class="applications">
-            <h3>Flutter Yahtzee</h3>
-            <p>Uses the Flutter Framework to create </p>
-          </section>
+    <section id="appThree" class="applications">
+      <h3>Python Programs</h3>
+    </section>
 
 
-          <section id="appFive" class="applications">
-            <h3>Get Sunset Application</h3>
-            <p>A Basic Website that uses the Sunset Sunrise API to get sunsets at certain locations</p>
-            <p>Also Uses Current Location API to get Sunset Information for your current location</p>
-            <a href="https://github.com/amp8889/JSWebPrograms">Github Repo</a>
-
-            <section class="imageSection">
-              <img src="../assets/sunsetChicago.png" alt="Image of Sunset Chicago">
-              <img src="../assets/sunsetCurrentLocation.png" alt="Image Sunset Current Location">
-              <img src="../assets/sunsetFlordia.png" alt="Image of Sunset Flordia">
-              <img src="../assets/sunsetNewOrleans.png" alt="Image of Sunset New Orleans">
-            </section>
-
-          </section>
+    <section id="appFour" class="applications">
+      <h3>Flutter Yahtzee</h3>
+      <p>Uses the Flutter Framework to create </p>
+    </section>
 
 
-          <section id="appSix" class="applications">
-            <h3>Hawk Bizzare</h3>
-            <p>A Flask Web Application with built in Vault Control</p>
-            <p>
-              A platform for Illinois Tech Students to Buy and Sell various school related supplies (Ex: Text Books
-              , Furnature, Archetect Tools, etc.)
-            </p>
-            <p>Uses the Google Oauth API to track logins and prevent out of school accounts from logging in.</p>
-            <a href="https://github.com/illinoistech-itm/team03m-2024">Github Repo</a>
+    <section id="appFive" class="applications">
+      <h3>Get Sunset Application</h3>
+      <p>A Basic Website that uses the Sunset Sunrise API to get sunsets at certain locations</p>
+      <p>Also Uses Current Location API to get Sunset Information for your current location</p>
+      <a href="https://github.com/amp8889/JSWebPrograms">Github Repo</a>
 
-            <section class="imageSection">
-              <img src="../assets/hawkBizzareAbout.png" alt="Image of About Page">
-              <img src="../assets/hawkBizzareHomepage.png" alt="Image of Homepage">
-              <img src="../assets/hawkBizzareOauthLogin.png" alt="Image of Google Oauth">
-              <img src="../assets/hawkBizzareAllowInfo.png" alt="Image of Google asking for Permission">
-            </section>
-          </section>
-      
-        </main>
-        <footer id="footer">
-          <p>Site content and Resume for Aidan Pavlik</p>
-      </footer>
-    </body>
-  </html>
+      <section class="imageSection">
+        <img src="../assets/sunsetChicago.png" alt="Image of Sunset Chicago">
+        <img src="../assets/sunsetCurrentLocation.png" alt="Image Sunset Current Location">
+        <img src="../assets/sunsetFlordia.png" alt="Image of Sunset Flordia">
+        <img src="../assets/sunsetNewOrleans.png" alt="Image of Sunset New Orleans">
+      </section>
+
+    </section>
+
+
+    <section id="appSix" class="applications">
+      <h3>Hawk Bizzare</h3>
+      <p>A Flask Web Application with built in Vault Control</p>
+      <p>
+        A platform for Illinois Tech Students to Buy and Sell various school related supplies (Ex: Text Books
+        , Furnature, Archetect Tools, etc.)
+      </p>
+      <p>Uses the Google Oauth API to track logins and prevent out of school accounts from logging in.</p>
+      <a href="https://github.com/illinoistech-itm/team03m-2024">Github Repo</a>
+
+      <section class="imageSection">
+        <img src="../assets/hawkBizzareAbout.png" alt="Image of About Page">
+        <img src="../assets/hawkBizzareHomepage.png" alt="Image of Homepage">
+        <img src="../assets/hawkBizzareOauthLogin.png" alt="Image of Google Oauth">
+        <img src="../assets/hawkBizzareAllowInfo.png" alt="Image of Google asking for Permission">
+      </section>
+    </section>
+
+  </main>
+  <footer id="footer">
+    <p>Site content and Resume for Aidan Pavlik</p>
+  </footer>
+</body>
+
+</html>
