--- a/index.html
+++ b/index.html
@@ -1,60 +1,78 @@
 <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="utf-8" />
-      <title>Aidan Pavlik</title>
-      <link rel="stylesheet" href="screen.css" />
-    </head>
-    <body>
-      <header id="site-header">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Roboto+Mono&display=swap" rel="stylesheet">
-        <section  class="intro">
-          <img src="assets/code.png" alt="Image of programming languages" />
-          <h2 class="intro-text">Hi, I'm Aidan Pavlik</h2>
-        </section>
-      </header>
-      <main id="content">
-        <section class="homepage-tab">
-          <h3 class="title-one">Who am I???</h3>
-          <img class="image-one"src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
-          <p class="intro-one">I am a very quick and creative thinker.
-          I also like to look for unconvential solutions to problems that most would not think of.
-          I also like to think that I have a lot of common sense.
-          More so than most people I know. This allows me to not overthink a simple problem.
-          Finally, I firmly believe in not giving up and pushing through whatever you might be stuck on or troubling you.
-          Because most of the time you will
-          come out a better person because of it.
-          </p>
-          <a class="link-one" href="resume/">Visit My Resume</a>
-        </section>
-        <section class="homepage-tab-two" id="education">
-          <h3 class="title-two">Education</h3>
-          <p class="intro-two">I am currently a second year ITM major at Illinois institute of technology.
-              While I am learning the skills of ITM in general.
-              I intend to specialize in software development.
-              I also participate in different clubs/organizations at IIT.
-              The biggest being the IIT Esports organization. With the help of a couple of friends,
-              I also intend to start a DnD/Tabletop RPG club at some point this year.
-          </p>
-          <img class="image-two"src="assets/illinois-tech-logo.png" alt="Image of Illinois Tech Logo" />
-          <a class="link-two"href="illinoistech.com">See my academic achievments</a>
-        </section>
-        <section class="homepage-tab">
-          <h3 class="title-one">Projects and Code</h3>
-          <img class="image-one"src="assets/github.png" alt="Image of GitHub Logo" />
-          <p class="intro-one">Over the years I have completed many different Projects.
-            Mainly, these projects are programming related. I have the most experience and work in Java
-            although, I have knowledge in several other languages including Python, Javascript, CSS, HTML and MYSQL.
-            I have posted some of my bigger ones on my github page for public access.
-          </p>
-          <a class="link-one"href="https://github.com/amp8889?tab=repositories">Visit My GitHub Repo Page</a>
-        </section>
-      </main>
-      <footer id="footer">
-        <p>Site content for Aidan Pavlik</p>
-      </footer>
-      <script src="main.js"></script>
-    </body>
-  </html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8" />
+  <title>Aidan Pavlik</title>
+  <link rel="stylesheet" href="screen.css" />
+</head>
+
+<body>
+  <header id="site-header">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@300&family=Roboto+Mono&display=swap"
+      rel="stylesheet">
+    <section class="intro">
+      <img src="assets/code.png" alt="Image of programming languages" />
+      <h2 class="intro-text">Hi, I'm Aidan Pavlik</h2>
+    </section>
+  </header>
+
+  <nav id="site-nav">
+    <ul>
+      <li>
+        <a href="../">Home</a>
+      </li>
+      <li>
+        <a href="../resume/">Resume</a>
+      </li>
+      <li>
+        <a href="../Projects/">Projects</a>
+      </li>
+    </ul>
+  </nav>
+  <main id="content">
+    <section class="homepage-tab">
+      <h3 class="title-one">Who am I???</h3>
+      <img class="image-one" src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
+      <p class="intro-one">I am a very quick and creative thinker.
+        I also like to look for unconvential solutions to problems that most would not think of.
+        I also like to think that I have a lot of common sense.
+        More so than most people I know. This allows me to not overthink a simple problem.
+        Finally, I firmly believe in not giving up and pushing through whatever you might be stuck on or troubling you.
+        Because most of the time you will
+        come out a better person because of it.
+      </p>
+      <a class="link-one" href="resume/">Visit My Resume</a>
+    </section>
+    <section class="homepage-tab-two" id="education">
+      <h3 class="title-two">Education</h3>
+      <p class="intro-two">I am currently a second year ITM major at Illinois institute of technology.
+        While I am learning the skills of ITM in general.
+        I intend to specialize in software development.
+        I also participate in different clubs/organizations at IIT.
+        The biggest being the IIT Esports organization. With the help of a couple of friends,
+        I also intend to start a DnD/Tabletop RPG club at some point this year.
+      </p>
+      <img class="image-two" src="assets/illinois-tech-logo.png" alt="Image of Illinois Tech Logo" />
+      <a class="link-two" href="Projects/">See My Projects</a>
+    </section>
+    <section class="homepage-tab">
+      <h3 class="title-one">Projects and Code</h3>
+      <img class="image-one" src="assets/github.png" alt="Image of GitHub Logo" />
+      <p class="intro-one">Over the years I have completed many different Projects.
+        Mainly, these projects are programming related. I have the most experience and work in Java
+        although, I have knowledge in several other languages including Python, Javascript, CSS, HTML and MYSQL.
+        I have posted some of my bigger ones on my github page for public access.
+      </p>
+      <a class="link-one" href="https://github.com/amp8889?tab=repositories">Visit My GitHub Repo Page</a>
+    </section>
+  </main>
+  <footer id="footer">
+    <p>Site content for Aidan Pavlik</p>
+  </footer>
+  <script src="main.js"></script>
+</body>
+
+</html>
