--- a/resume/index.html
+++ b/resume/index.html
@@ -70,6 +70,13 @@
       <h3 class="resume-main-title">Relevent Experience</h3>
       <p></p>
 
+      <h4>IT Intern at AK Group LLC (June-August 2023)</h4>
+      <ul>
+        <li>Hardware Repair</li>
+        <li>Basic Networking Upkeep</li>
+        <li>Basic Microsoft Automate</li>
+        <li>Computer Upkeep</li>
+      </ul>
       <h4>Class and Professor Reviewer</h4>
       <ul>
         <li>Made with Small Group</li>
