Create reimagined footer

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -113,7 +113,7 @@
 
   </main>
   <footer id="footer">
-    <p>Site content and Resume for Aidan Pavlik</p>
+        <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
 </body>
 
