--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
   </main>
   <footer id="footer">
-    <p>Site content for Aidan Pavlik</p>
+      <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
   <script src="main.js"></script>
 </body>
