--- a/resume/index.html
+++ b/resume/index.html
@@ -143,7 +143,7 @@
     </section>
   </main>
   <footer id="footer">
-    <p>Site content and Resume for Aidan Pavlik</p>
+      <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
 </body>
 </html>
