Fix pathing on project page

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -12,13 +12,13 @@
     <nav id="site-nav">
       <ul>
         <li>
-          <a href="../">Home</a>
+          <a href="./">Home</a>
         </li>
         <li>
-          <a href="../resume/">Resume</a>
+          <a href="./resume/">Resume</a>
         </li>
         <li>
-          <a href="../Projects/">Projects</a>
+          <a href="./Projects/">Projects</a>
         </li>
       </ul>
     </nav>
