--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <nav id="site-nav">
     <ul>
       <li>
-        <a href="/">Home</a>
+        <a href="">Home</a>
       </li>
       <li>
         <a href="resume/">Resume</a>
