--- a/resume/index.html
+++ b/resume/index.html
@@ -11,9 +11,9 @@
   <header>
     <nav>
       <ul class="nav-bar">
-        <li class="nav-item"><a href="/index.html">Home</a></li>
-        <li class="nav-item"><a href="/resume/">Resume</a></li>
-        <li class="nav-item"><a href="/Projects/">Projects</a></li>
+        <li class="nav-item"><a href="./">Home</a></li>
+        <li class="nav-item"><a href="./resume/">Resume</a></li>
+        <li class="nav-item"><a href="./Projects/">Projects</a></li>
       </ul>
     </nav>
 
