Fix navbar for resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -9,11 +9,17 @@
 
 <body>
   <header>
-    <nav>
-      <ul class="nav-bar">
-        <li class="nav-item"><a href="./">Home</a></li>
-        <li class="nav-item"><a href="./resume/">Resume</a></li>
-        <li class="nav-item"><a href="./Projects/">Projects</a></li>
+    <nav id="site-nav">
+      <ul>
+        <li>
+          <a href="./">Home</a>
+        </li>
+        <li>
+          <a href="./resume/">Resume</a>
+        </li>
+        <li>
+          <a href="./Projects/">Projects</a>
+        </li>
       </ul>
     </nav>
 
