--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <a href="">Home</a>
       </li>
       <li>
-        <a href="resume/">Resume</a>
+        <a href="resume">Resume</a>
       </li>
       <li>
-        <a href="Projects/">Projects</a>
+        <a href="Projects">Projects</a>
       </li>
     </ul>
   </nav>
