fix image path issue in resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -30,7 +30,7 @@
     <section class="side-info" id="resume">
       <h3 class="resume-side-title">Contact Information</h3>
       <p>Aidan Pavlik</p>
-      <img class="image-side" src="/assets/aidan_casual.jpg" alt="Image of Aidan" />
+      <img class="image-side" src="../assets/aidan_casual.jpg" alt="Image of Aidan" />
 
       <ul>
         <li class="email"><a href="mailto:aidan.pavlik@gmail.com">aidan.pavlik@gmail.com</a></li>
