Add Fade in effect for all pages

--- a/Projects/index.html
+++ b/Projects/index.html
@@ -25,7 +25,7 @@
   </header>
   <main id="projectsContent">
 
-    <section id="appOne" class="applications">
+    <section id="appOne" class="applications fade-in">
       <h3>Student Review Database</h3>
       <p>Flask Web Application</p>
       <p>A Web application built to allows student to review classes and Professors.
@@ -48,7 +48,7 @@
     </section>
 
 
-    <section id="appTwo" class="applications">
+    <section id="appTwo" class="applications fade-in">
       <h3>Cybergoose</h3>
 
       <p>A cybersecurity Application built to scan your PC for weaknesses </p>
@@ -66,18 +66,18 @@
     </section>
 
 
-    <section id="appThree" class="applications">
+    <section id="appThree" class="applications fade-in">
       <h3>Python Programs</h3>
     </section>
 
 
-    <section id="appFour" class="applications">
+    <section id="appFour" class="applications fade-in">
       <h3>Flutter Yahtzee</h3>
       <p>Uses the Flutter Framework to create </p>
     </section>
 
 
-    <section id="appFive" class="applications">
+    <section id="appFive" class="applications fade-in">
       <h3>Get Sunset Application</h3>
       <p>A Basic Website that uses the Sunset Sunrise API to get sunsets at certain locations</p>
       <p>Also Uses Current Location API to get Sunset Information for your current location</p>
@@ -93,7 +93,7 @@
     </section>
 
 
-    <section id="appSix" class="applications">
+    <section id="appSix" class="applications fade-in">
       <h3>Hawk Bizzare</h3>
       <p>A Flask Web Application with built in Vault Control</p>
       <p>
@@ -115,6 +115,9 @@
   <footer id="footer">
         <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
+
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+  <script src="../main.js"></script>
 </body>
 
 </html>
