--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </ul>
   </nav>
   <main id="content">
-    <section class="homepage-tab">
+    <section class="homepage-tab fade-in">
       <h3 class="title-one">Who am I???</h3>
       <img class="image-one" src="assets/aidan_pavlik_suit.jpg" alt="Image of programming languages" />
       <p class="intro-one">I am a very quick and creative thinker.
@@ -46,7 +46,7 @@
       </p>
       <a class="link-one" href="resume/">Visit My Resume</a>
     </section>
-    <section class="homepage-tab-two" id="education">
+    <section class="homepage-tab-two fade-in" id="education">
       <h3 class="title-two">Education</h3>
       <p class="intro-two">I am currently a second year ITM major at Illinois institute of technology.
         While I am learning the skills of ITM in general.
@@ -58,7 +58,7 @@
       <img class="image-two" src="assets/illinois-tech-logo.png" alt="Image of Illinois Tech Logo" />
       <a class="link-two" href="Projects/">See My Projects</a>
     </section>
-    <section class="homepage-tab">
+    <section class="homepage-tab fade-in">
       <h3 class="title-one">Projects and Code</h3>
       <img class="image-one" src="assets/github.png" alt="Image of GitHub Logo" />
       <p class="intro-one">Over the years I have completed many different Projects.
@@ -72,6 +72,7 @@
   <footer id="footer">
       <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="main.js"></script>
 </body>
 
