--- a/resume/index.html
+++ b/resume/index.html
@@ -27,7 +27,7 @@
   <main id="resume-content">
 
 
-    <section class="side-info" id="resume">
+    <section class="side-info fade-in" id="resume">
       <h3 class="resume-side-title">Contact Information</h3>
       <p>Aidan Pavlik</p>
       <img class="image-side" src="../assets/aidan_casual.jpg" alt="Image of Aidan" />
@@ -41,7 +41,7 @@
       </ul>
     </section>
 
-    <section class="main-info" id="education">
+    <section class="main-info fade-in" id="education">
       <h3 class="resume-main-title">Education</h3>
       <p></p>
       <p>Illinois Institute of Technology</p>
@@ -52,7 +52,7 @@
       <p>GPA: 3.54/4.0</p>
     </section>
 
-    <section class="main-info" id="skills">
+    <section class="main-info fade-in" id="skills">
       <h3 class="resume-main-title">Professional Skills</h3>
       <p></p>
       <ul>
@@ -72,7 +72,7 @@
       </ul>
     </section>
 
-    <section class="main-info">
+    <section class="main-info fade-in">
       <h3 class="resume-main-title">Relevent Experience</h3>
       <p></p>
 
@@ -122,7 +122,7 @@
         </li>
       </ul>
     </section>
-    <section class="main-info" id="work">
+    <section class="main-info fade-in" id="work">
       <h3 class="resume-main-title">Leadership Experience</h3>
       <p></p>
       <h4>Captain and Manager of the Illinois Tech Overwatch Esports Team</h4>
@@ -133,7 +133,7 @@
         </li>
       </ul>
     </section>
-    <section class="main-info">
+    <section class="main-info fade-in">
       <h3 class="resume-main-title">Personal</h3>
       <p></p>
       <ul>
@@ -151,5 +151,7 @@
   <footer id="footer">
       <p>&copy; 2024 Aidan Pavlik. All rights reserved.</p>
   </footer>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+    <script src="../main.js"></script>
 </body>
 </html>
